dropping Eclipse Collections